Fixed new structure

--- a/includes/index.html
+++ b/includes/index.html
@@ -1,38 +1,38 @@
 <h2 class="main-title">Välkommen till jsramverk</h2>
 
-<p>Detta är kursen DV1612 JavaScript-baserade webbramverk. Vi ska i denna kurs använda oss av JavaScript ramverk både på frontend och backend för att skapa användarvänliga webbplatser.</p>
+<p>Detta är kursen DV1677 JavaScript-baserade webbramverk. Vi ska i denna kurs använda oss av JavaScript ramverk både på frontend och backend för att vidareutveckla en befintlig applikation.</p>
 <p>Kursen ges till <a aria-label="dbwebb.se" href="https://dbwebb.se" target="_blank" rel="noopener">webbprogrammeringsstudenter</a> vid <a aria-label="Blekinge Tekniska Högskola" href="https://bth.se" target="_blank" rel="noopener">Blekinge Tekniska Högskola</a>. Och är en av Sveriges enda högskolekurser i JavaScript ramverk. Källkoden till denna webbplats finns på <a aria-label="GitHub" href="https://github.com/emilfolino/jsramverk.se" target="_blank" rel="noopener">GitHub emilfolino/jsramverk.se</a></p>
-<p>I kursen bygger vi en egen <em>"real-time collaborative document editor"</em>. Nedan finns inlämningsuppgifter tillsammans med material om de tekniker och verktyg som används i kursen.</p>
+<p>I kursen bygger vi vidare på en tåg-trafik-ledare applikation tillsammans två och två. Vi tar en titt på hur detta samarbetet kan bli optimalt och vilka tekniker och verktyg som finns för att samarbeta om vidareutveckling av kod.</p>
 
 <section class="assignments">
     <div class="assignment-box">
         <div class="assignment-header">
-            <h3><a aria-label="Vecka 1: Frontend" href="frontend">1: Frontend</a></h3>
+            <h3><a aria-label="Vecka 1 & 2:  Specifikation" href="specification">Vecka 1 & 2: Specifikation</a></h3>
         </div>
         <div class="assignment-body">
-            <p>Vi utvärderar frontend ramverk och skapar ett första utkast till frontenden för vår editor i det JavaScript ramverk du valde.</p>
+            <p>Vi utvärderar frontend ramverk och skapar en specifikation för den vidareutveckling vi ämnar utföra.</p>
 
-            <p><a aria-label="Vecka 1: Frontend" href="frontend">Gå till uppgiften</a></p>
+            <p><a aria-label="Vecka 1 & 2:  Specifikation" href="specification">Vecka 1 & 2: Specifikation</a></p>
         </div>
     </div>
     <div class="assignment-box span-2">
         <div class="assignment-header">
-            <h3><a aria-label="Vecka 2: Backend" href="backend">2: Backend</a></h3>
+            <h3><a aria-label="Vecka 3-5: Refaktorering" href="refactoring">Vecka 3-5: Refaktorering</a></h3>
         </div>
         <div class="assignment-body">
-            <p>Vi kopplar en backend med mongodb som databas till frontenden. Dessutom driftsätter vi frontend och backend i Azures moln.</p>
+            <p>Vi byter ut vår SQL databas mot en dokumentorienterad databas. Vi skriver om koden för frontend till att använda ett frontend-ramverk och introducerar tester till frontend. Slutligen driftsätter vi våra applikationer i molnet.</p>
 
-            <p><a aria-label="Vecka 2: Backend" href="backend">Gå till uppgiften</a></p>
+            <p><a aria-label="Vecka 3-5: Refaktorering" href="refactoring">Vecka 3-5: Refaktorering</a></p>
         </div>
     </div>
     <div class="assignment-box project">
         <div class="assignment-header">
-            <h3><a aria-label="Projekt" href="projekt">Projekt</a></h3>
+            <h3><a aria-label="Vecka 5-9: Vidareutveckling" href="development">Vecka 5-9: Vidareutveckling</a></h3>
         </div>
         <div class="assignment-body">
-            <p>Du använder dina kunskaper från tidigare i kursen och införskaffar ny kunskap genom att bygga vidare på din editor med upp till 6 nya features.</p>
+            <p>Kursen avslutas med att vi vidareutvecklar applikation till att innehålla nya features och nya tekniker. Applikationen färdigställs och vi säkertsäller funktionalitet genom ytterligare testning.</p>
 
-            <p><a aria-label="Projekt" href="projekt">Gå till projektet</a></p>
+            <p><a aria-label="Vecka 5-9: Vidareutveckling" href="development">Vecka 5-9: Vidareutveckling</a></p>
         </div>
     </div>
 </section>
@@ -43,9 +43,7 @@
     <section id="repo">
         <h3><a aria-label="Exempelprogram" href="#repo">Exempelprogram</a></h3>
 
-        <p>Exempelprogrammen som används i kursen finns i GitHub-repot <a aria-label="" href="https://github.com/emilfolino/jsramverk" target="_blank" rel="noopener">emilfolino/jsramverk</a>.</p>
-
-        <p>För kursmomenten Backend, Test och Auth finns repot <a aria-label="" href="https://github.com/emilfolino/auth_mongo" target="_blank" rel="noopener">emilfolino/auth_mongo</a>. Detta är ett fullständigt exempel för backend koden vi skriver i denna kurs.</p>
+        <p>Exempelprogrammen som används i kursen finns i GitHub-repon <a aria-label="" href="https://github.com/emilfolino/jsramverk" target="_blank" rel="noopener">emilfolino/jsramverk</a> och <a aria-label="" href="https://github.com/emilfolino/auth_mongo" target="_blank" rel="noopener">emilfolino/auth_mongo</a>.</p>
     </section>
 
     <section id="chat">
@@ -92,13 +90,13 @@
                     <td>15</td>
                 </tr>
                 <tr>
-                    <td>Grunden</td>
+                    <td>Refaktorering</td>
                     <td>Inlämningsuppgift 2 á 2hp</td>
                     <td>G-U</td>
                     <td>25</td>
                 </tr>
                 <tr>
-                    <td>Projekt</td>
+                    <td>Vidareutveckling</td>
                     <td>Projektuppgift á 4,5hp</td>
                     <td>A-F</td>
                     <td>20-60</td>
@@ -152,7 +150,7 @@
 
     <section id="previous">
         <h3><a aria-label="Tidigare år" href="#previous">Tidigare år</a></h3>
-        <p><a aria-label="2022" href="https://2022.jsramverk.se">Kursmaterial 2022</a></p>
+        <p><a aria-label="2021-2022" href="https://2022.jsramverk.se">Kursmaterial 2021-2022</a></p>
         <p><a aria-label="2020" href="https://2020.jsramverk.se">Kursmaterial 2020</a></p>
         <p><a aria-label="2019" href="https://2019.jsramverk.se">Kursmaterial 2019</a></p>
     </section>
