Started work on last assignment

--- a/includes/index.html
+++ b/includes/index.html
@@ -41,9 +41,15 @@
     <h2><a aria-label="Generell information" href="#general-information">Generell information</a></h2>
 
     <section id="repo">
+        <h3><a aria-label="Par" href="#pairs">Par</a></h3>
+
+        <p>Inlämningsuppgifterna genomförs tillsammans i par. Vi kommer under kursens gång belysa effektiva arbetssätt för att jobba tillsammans i par. För varje inlämningsuppgift finns även en individuell redovisningstext, som ska skrivas. <strong>Denna skrivs individuellt och lämnas in i Canvas.</strong></p>
+    </section>
+
+    <section id="repo">
         <h3><a aria-label="Exempelprogram" href="#repo">Exempelprogram</a></h3>
 
-        <p>Exempelprogrammen som används i kursen finns i GitHub-repon <a aria-label="" href="https://github.com/emilfolino/jsramverk" target="_blank" rel="noopener">emilfolino/jsramverk</a> och <a aria-label="" href="https://github.com/emilfolino/auth_mongo" target="_blank" rel="noopener">emilfolino/auth_mongo</a>.</p>
+        <p>Exempelprogrammen som kan användas för inspiration i kursen finns i GitHub-repon <a aria-label="" href="https://github.com/emilfolino/jsramverk" target="_blank" rel="noopener">emilfolino/jsramverk</a> och <a aria-label="" href="https://github.com/emilfolino/auth_mongo" target="_blank" rel="noopener">emilfolino/auth_mongo</a>.</p>
     </section>
 
     <section id="chat">
