--- a/sass/toc.scss
+++ b/sass/toc.scss
@@ -1,4 +1,8 @@
 @media (min-width: 992px) {
+    .toc {
+        padding-top: 2.8rem;
+    }
+
     .toc ul li {
         padding: 0.4rem 0 0.1rem 0;
         font-size: $mainPFontSize * $fontScaleDownFactor;
