--- a/slides/jsramverk.css
+++ b/slides/jsramverk.css
@@ -83,3 +83,21 @@ a {
 .framework-container>img {
     width: 22%;
 }
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+table th {
+    text-align: left;
+}
+
+table td,
+table th {
+    padding: 0.8rem 1.2rem;
+}
+
+table td {
+    border-top: 1px solid #f0db4f;
+}
