Started transformation before HT24

--- a/includes/index.html
+++ b/includes/index.html
@@ -2,7 +2,7 @@
 
 <p>Detta är kursen DV1677 JavaScript-baserade webbramverk. Vi ska i denna kurs använda oss av JavaScript ramverk både på frontend och backend för att vidareutveckla en befintlig applikation.</p>
 <p>Kursen ges till <a aria-label="dbwebb.se" href="https://dbwebb.se" target="_blank" rel="noopener">webbprogrammeringsstudenter</a> vid <a aria-label="Blekinge Tekniska Högskola" href="https://bth.se" target="_blank" rel="noopener">Blekinge Tekniska Högskola</a>. Och är en av Sveriges enda högskolekurser i JavaScript ramverk. Källkoden till denna webbplats finns på <a aria-label="GitHub" href="https://github.com/emilfolino/jsramverk.se" target="_blank" rel="noopener">GitHub emilfolino/jsramverk.se</a></p>
-<p>I kursen bygger vi vidare på en tåg-trafik-ledare applikation tillsammans två och två. Vi tar en titt på hur detta samarbetet kan bli optimalt och vilka tekniker och verktyg som finns för att samarbeta om vidareutveckling av kod.</p>
+<p>I kursen bygger vi vidare på en <em>"real-time collaborative text-editor"</em>-applikation tillsammans två och två. Vi tar en titt på hur detta samarbetet kan bli optimalt och vilka tekniker och verktyg som finns för att samarbeta om vidareutveckling av kod.</p>
 
 <section class="assignments">
     <div class="assignment-box">
@@ -156,6 +156,7 @@
 
     <section id="previous">
         <h3><a aria-label="Tidigare år" href="#previous">Tidigare år</a></h3>
+        <p><a aria-label="2023" href="https://2023.jsramverk.se">Kursmaterial 2023</a></p>
         <p><a aria-label="2021-2022" href="https://2022.jsramverk.se">Kursmaterial 2021-2022</a></p>
         <p><a aria-label="2020" href="https://2020.jsramverk.se">Kursmaterial 2020</a></p>
         <p><a aria-label="2019" href="https://2019.jsramverk.se">Kursmaterial 2019</a></p>
