Updated all reqs for assignments

--- a/includes/index.html
+++ b/includes/index.html
@@ -20,7 +20,7 @@
             <h3><a aria-label="Vecka 3-5: Refaktorering" href="refactoring">Vecka 3-5: Refaktorering</a></h3>
         </div>
         <div class="assignment-body">
-            <p>Vi byter ut vår SQL databas mot en dokumentorienterad databas. Vi skriver om koden för frontend till att använda ett frontend-ramverk och introducerar tester till frontend. Slutligen driftsätter vi våra applikationer i molnet.</p>
+            <p>Vi byter ut vår SQL databas mot en dokumentorienterad databas i backend. Vi skapar en fristående frontend och gör om backend till ett JSON-api. Slutligen driftsätter vi våra applikationer i molnet.</p>
 
             <p><a aria-label="Vecka 3-5: Refaktorering" href="refactoring">Vecka 3-5: Refaktorering</a></p>
         </div>
